Добавление логера log4j2